revenue adjusted when invoices change